--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -50,12 +50,22 @@ p {
     border: 1px solid rgb(103, 78, 118);
 }
 
-.scores {
+.viewScores {
     position: absolute;
     top:6%;
     left:3%;
     font-size: 24px;
     color: rgb(103, 78, 118);
+}
+
+/* .viewScores:hover .preAttemptRec {
+    display: block;
+} */
+
+.preAttemptRec {
+    display: none;
+    font-size: 18px;
+    color:rgb(41, 38, 35);
 }
 
 .timer {
@@ -103,15 +113,39 @@ p {
     font-size: 30px;
 }
 
-#userInitial {
-    margin-top: 10px;
-    width: 80%;
+.userInitial {
+    padding-top: 12px;
+    position: relative;
     height: 6vh;
-    background-color:rgb(155, 141, 164);
+    width: 80%;
+    margin: auto;
+}
+
+#userInitial {
+    width: 79%;
+    height: 100%;
+    background-color: rgb(155, 141, 164);
+    border: 1px solid rgb(155, 141, 164);
     color: white;
     font-size: 27px;
-    border-radius: 6px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    position: absolute;
+    left: 0%;
 } 
+
+#submit {
+    position: absolute;
+    right: 0%;
+    height: 108%;
+    width: 21%;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    font-size: 24px;
+    background-color: rgb(103, 78, 118);
+    border: 1px solid rgb(103, 78, 118);
+    color: white;
+}
 
 #tryAgain {
     font-size: 28px;
